--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background-color: #1e1e1e;
+      background-color: #000000;
       color: #ffffff;
       font-family: monospace;
     }
