--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-         <a href="index.html" id="website-name">
+         <a href="https://www.ghodasara.dev" id="website-name">
             <h1><span style="font-weight: 200">DEV </span><span style="font-weight: 500">GHODASARA</span></h1>
         </a>
         <button class="toggle-menu" onclick="displayMenu()" aria-label="Menu">&#9776;</button>
         <nav class="sections">
             <ul>
-                <li><a href="index.html">About me</a></li>
+                <li><a href="https://www.ghodasara.dev">About me</a></li>
                 <li><a href="connect.html">Connect</a></li>
                 <li><a href="resume.html">Resume</a><li>
             </ul>
