added animation for name

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <header>
-         <a href="https://www.ghodasara.dev" id="website-name">
-            <h1><span style="font-weight: 200">DEV </span><span style="font-weight: 500">GHODASARA</span></h1>
+        <a href="https://www.ghodasara.dev" id="website-name">
+            <h1>
+                <span class="animate-dev" style="font-weight: 200">
+                    <span class="alternate-text">&lt;</span><span class="original-text">DEV</span><span class="alternate-text">/&gt;</span>
+                </span>
+                <span style="font-weight: 500">GHODASARA</span>
+            </h1>
         </a>
         <button class="toggle-menu" onclick="displayMenu()" aria-label="Menu">&#9776;</button>
         <nav class="sections">
