embedded google form for contact

--- a/connect.html
+++ b/connect.html
@@ -31,7 +31,7 @@
             </label>
         </div>
     </header>
-    <p>Connection information comming soon! </p>
+    <iframe id="contact-form" src="https://docs.google.com/forms/d/e/1FAIpQLSfeaoVTizYxUiRfaRyOZS9--6SCzv3JQr6nJJDUxMDpUgcozw/viewform?embedded=true" frameborder="0">Loading form…</iframe>
     <script src="script.js"></script>
 </body>
 </html>
