--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
         <button class="toggle-menu" onclick="displayMenu()" aria-label="Menu">&#9776;</button>
         <nav class="sections">
             <ul>
-                <li><a href="index.html">About me</a></li>
+                <li><a href="https://www.ghodasara.dev">About me</a></li>
                 <li><a href="connect.html">Connect</a></li>
                 <li><a href="resume.html">Resume</a><li>
             </ul>
