Added projects page

--- a/connect.html
+++ b/connect.html
@@ -20,6 +20,7 @@
         <nav class="sections">
             <ul>
                 <li><a href="https://www.ghodasara.dev">About me</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="connect.html">Connect</a></li>
                 <li><a href="resume.html">Resume</a><li>
             </ul>
@@ -35,10 +36,10 @@
         <p>Connect with me on LinkedIn or GitHub:</p>
         <div class="social-media-buttons">
             <a href="https://www.linkedin.com/in/devghodasara" target="_blank">
-                <img src="Images/linkedin-logo.png" alt="LinkedIn" width="50px" height="45px">
+                <img id="li-logo" src="Images/linkedin-logo.png" alt="LinkedIn" width="50px" height="45px">
             </a>
             <a href="https://github.com/devghodasara" target="_blank">
-                <img src="Images/github-logo.png" alt="GitHub"  width="50px" height="50px">
+                <img id="gh-logo" src="Images/github-logo.png" alt="GitHub"  width="50px" height="50px">
             </a>
         </div>
         <p> OR <br/> <br/> reach out via the form below: </p>
