--- a/resume.html
+++ b/resume.html
@@ -20,6 +20,7 @@
         <nav class="sections">
             <ul>
                 <li><a href="https://www.ghodasara.dev">About me</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="connect.html">Connect</a></li>
                 <li><a href="resume.html">Resume</a><li>
             </ul>
