--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <nav class="sections">
             <ul>
                 <li><a href="https://www.ghodasara.dev">About me</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="connect.html">Connect</a></li>
                 <li><a href="resume.html">Resume</a><li>
             </ul>
@@ -35,7 +36,7 @@
         <p id="my-intro" > Hello, I'm Dev Ghodasara – a passionate problem solver originally from India, now immersed in the dynamic field of computer science in the USA. 
             My journey involves ardently tackling challenges head-on, driven by a profound enthusiasm for problem-solving through technology. 
             Always eager to learn and embrace new aspects of the tech landscape, I invite you to explore this page and uncover more about my dynamic adventure of continuous growth and exploration in the world of problem-solving. 
-            Dive into my projects on the Projects page to discover the innovative solutions and exciting endeavors I've undertaken. 
+            Dive into my projects on the <a href="projects.html" style="color: inherit;">Projects page</a> to discover the innovative solutions and exciting endeavors I've undertaken. 
             If you share a passion for creating remarkable solutions, let's <a href="connect.html" style="color: inherit;">connect</a> and explore the possibilities beyond the code.</p>
     </main>
     <script src="script.js"></script>
