added new project

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
     </header>
     <div id="projects">
         <div class="project-container">
-            <div class="project-name">Mini-C Complier</div>
+            <div class="project-name">Mini-C Compiler</div>
             </br>
             <div class="tech-stack-container">
                 <div class="tech-stack">Tech Stack:</div>
@@ -43,7 +43,9 @@
             </div>
             </br>
             <div class="project-description">
-                A sophisticated Mini-C compiler designed to perform thorough syntax and semantic analysis, providing error detection and generating well-formatted, indented code. This compiler is meticulously crafted to adhere to the specifications of the Mini-C language, encompassing a comprehensive set of keywords, symbols, operators, and lexical patterns.
+                A sophisticated Mini-C compiler designed to perform thorough syntax and semantic analysis, providing error detection and generating well-formatted, indented code. 
+                This compiler is meticulously crafted to adhere to the specifications of the Mini-C language, encompassing a comprehensive set of keywords, symbols, operators, and lexical patterns.
+                It captivates deep understanding of the inner workings of the C language and its syntax and semantics, compiler design and implementation, and the power of the compiler. 
             </div>
         </div>
         <div class="project-container">
@@ -59,7 +61,31 @@
             </div>
             </br>
             <div class="project-description">
-                A personal portfolio website hosted on GitHub Pages. The project features a smooth navigation system, responsive design, and a seamless transition between pages. It showcases my skills and experience, and has a contact form for users. The website is fully responsive supports all screen sizes and is accessible on all devices.
+                Constructed a personalized webpage to exhibit my portfolio of projects. 
+                Complementing the project showcase is a bespoke contact form, facilitating effortless communication. 
+                Notably, Google APIs were leveraged to seamlessly submit form responses directly to Google Drive, 
+                streamlining data collection and management. 
+                Moreover, direct links to my GitHub and LinkedIn profiles are prominently featured, enabling visitors to explore my complete portfolio and professional background with ease. 
+                This webpage serves as a dynamic platform for presenting projects, fostering interaction, and integrating with external platforms for efficient data handling
+            </div>
+        </div>
+        <div class="project-container">
+            <div class="project-name">PSU plays</div>
+            </br>
+            <div class="tech-stack-container">
+                <div class="tech-stack">Tech Stack:</div>
+                <div class="tech">Android Studio</div>
+                <div class="tech">Java</div>
+                <div class="tech">SQL</div>
+                <div class="tech">GitHub</div>
+                <div class="tech">Custom APIs</div>
+            </div>
+            </br>
+            <div class="project-description">
+                An android app for intermural sports tournament management system that provides a seamless experience for players, organizers, and viewers. 
+                App provides a user-friendly interface for managing tournament schedules, player schedules, and event results.
+                It also features live streams and live scores for each event.
+                The system was built using Android Studio, Java, and SQL.
             </div>
         </div>
     </div>
